fix: :bug: closing windows on mobile

--- a/src/DesktopIcons/DestopIcons.module.scss
+++ b/src/DesktopIcons/DestopIcons.module.scss
@@ -36,10 +36,19 @@
     backdrop-filter: blur(10px);
     border-radius: 10px;
     gap: 10px;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+@media (max-width: 768px) {
+    .top{
+width: 80%;
+    }
 }
 
 @media (max-width: 1024px) {
-    .desktop{
+    .desktop:not(.top){
         gap: 10px;
         padding: 15px 5px;
     }
